@startuml SoundManager

class ControllerSound {
    - soundEngine: SoundEngine
    - soundView: SoundView
    + initialize()
    - setupAudioUnlock()
    - setupGlobalInteractions()
    - setupGameEvents()
}

class SoundEngine {
    - isMuted: boolean
    - audioUnlocked: boolean
    - masterVolume: float
    + toggleMute()
    + getIsMuted(): boolean
    + unlockAudio()
    + playHover()
    + playSelect()
    + playDrop()
    + playError()
    + playWin()
    + playDraw()
}

class SoundView {
    - muteButton: HTMLElement
    - soundEngine: SoundEngine
    + setModel(engine: SoundEngine)
    + renderMuteButton()
    + updateButtonState(isMuted: boolean)
    - handleMuteClick(e: Event)
}

ControllerSound --> SoundEngine : usa
ControllerSound --> SoundView : usa
SoundView --> SoundEngine : usa

@enduml